--- a/期末筆記/期末筆記.md
+++ b/期末筆記/期末筆記.md
@@ -4,7 +4,7 @@
 2. 確定性:有一致的執行過程。快速排序因為一開始會洗牌，所以沒有確定性。  
 3. 平行度:快速排序無法平行化  
 4. 空間花費:merge sort需要額外空間保存分治過程，無法直接交換。  
-![各種sort的複雜度](image.png)  
+![各種sort的複雜度](figure/image.png)  
 
 Symbol Table 實作方法: Binary Search Tree  
 1. linklist  
@@ -27,7 +27,7 @@ Symbol Table 實作方法: Binary Search Tree
       5. 最後原本欲刪除的節點，因為沒有人指向他，在java當中，會自己被回收。
    - 注意：Hibbard 刪除可能導致樹不平衡（刪除後樹高增加），實際應用中需謹慎使用。
    【Hibbard Deletion 程式實作】
-   ![Hibbard Deletion 程式實作](image-27.png)
+   ![Hibbard Deletion 程式實作](figure/image-27.png)
 
 
 4. 遍歷二元樹的方法 preorder, inorder, postorder (https://www.shubo.io/iterative-binary-tree-traversal/)
@@ -37,7 +37,7 @@ Symbol Table 實作方法: Binary Search Tree
 # 幾何搜尋
 1. KD-tree: 應用於 range search & nearest neighbor (113-2-PDSA-20250502-h2)  
 2. 區間搜尋 interval search tree (113-2-PDSA-20250502-h2)
-   ![alt text](image-1.png)
+   ![alt text](figure/image-1.png)
 3. 分群  
    1. 階層式分群 hierarchical clustering
       1. 群的距離定義有三種
@@ -61,28 +61,28 @@ Symbol Table 實作方法: Binary Search Tree
 
 # 圖
 1. 無向圖
-   ![鄰接表概念](image-3.png) **鄰接表概念**
-   ![鄰接表實作](image-2.png) **鄰接表實作** 
+   ![鄰接表概念](figure/image-3.png) **鄰接表概念**
+   ![鄰接表實作](figure/image-2.png) **鄰接表實作** 
 
    其中Bag是一種 linklist 代表裡面存放的資料 1.無序, 2.可重複  
    例如可以重複執行兩次 adj[v].add(w)，這代表V和W之間有兩條路徑。  
    `(Bag<Edge>[]) new Bag[V];`代表建立V個Bag(linklist)的容器(尚未建立實例)，前面的()代表讓編譯器檢查，linklist內只能存入Edge。但如果用特殊方法繞開編譯器，讓執行時存不同東西到Bag內，根本不會檢查。
    `new Bag<Edge>()`建立Bag的實例。並且實際限制每個Bag的add方法，只能加入Edge。
 
-   ![DFS概念](image-6.png) **DFS概念**
-   ![DFS實作](image-4.png) **DFS實作**
-   ![BFS概念](image-7.png) **BFS概念**
-   ![BFS實作](image-5.png) **BFS實作** <!-- 迴圈內比一開始初始化多了edgeTo[w]=v，還有distTo[w]邏輯不同 -->
-   ![連通分量(CC)概念](image-10.png) 連通分量(CC)概念
-   ![連通分量(CC)實作1](image-8.png) **連通分量(CC)**  
+   ![DFS概念](figure/image-6.png) **DFS概念**
+   ![DFS實作](figure/image-4.png) **DFS實作**
+   ![BFS概念](figure/image-7.png) **BFS概念**
+   ![BFS實作](figure/image-5.png) **BFS實作** <!-- 迴圈內比一開始初始化多了edgeTo[w]=v，還有distTo[w]邏輯不同 -->
+   ![連通分量(CC)概念](figure/image-10.png) 連通分量(CC)概念
+   ![連通分量(CC)實作1](figure/image-8.png) **連通分量(CC)**  
 
    `marked [v]`紀錄每個頂點有無被搜尋過，  
    `id [v]`紀錄每個頂點所屬的CC編號，  
    `count`總共有幾組CC。  
    構造函數遍歷每個頂點，如果還沒掃過，就用dfs掃所有連通的點，並且設定同樣的CC編號(id)，最後count+1。
 
-   ![連通分量(CC)實作2](image-9.png) **連通分量(CC)實作2**  
-   ![難度](image-11.png) **難度** <!-- 4.biconnected compoment指的是，有沒有點移除以後會導致CC失效的。 -->
+   ![連通分量(CC)實作2](figure/image-9.png) **連通分量(CC)實作2**  
+   ![難度](figure/image-11.png) **難度** <!-- 4.biconnected compoment指的是，有沒有點移除以後會導致CC失效的。 -->
    <!-- 6. 尤拉路徑: 一筆畫，每個邊只能經過一次(簡單)。 -->
    <!-- 7. 漢米爾頓路徑: 一筆畫，每個頂點只能經過一次(超難)。 -->
    <!-- 8. Bipartite graph (二分圖): 所有頂點分為兩群(紅、白)，所有紅點只能連到白點，所有白點只能連到紅點。-->
@@ -92,7 +92,7 @@ Symbol Table 實作方法: Binary Search Tree
 2. 有向圖 Digraph  
    1. 拓樸排序 Directed acyclic graph, (DAG, 有向無環圖) 113-2-PDSA-20250516-h1 25 min  
       - 【DAG概念】
-         ![DAG概念](image-29.png)
+         ![DAG概念](figure/image-29.png)
          - 遍歷順序: 從0出發做DFS，`.`代表是相同起點，但是已經走到底，`,`代表是不同的起點，最後順序為(014.52,36)
          - postorder: stack釋放時才將節點加入，得到 (4125063)  
          - topological order: 直接把postorder反過來。得到 (3605214)  
@@ -102,25 +102,25 @@ Symbol Table 實作方法: Binary Search Tree
          DAG 一定沒有迴圈  
 
       - 【DAG程式實作】  
-         ![alt text](image-28.png)
+         ![alt text](figure/image-28.png)
          使用 DFS 的程式，只要注意白色的部份，加上 stack 紀錄結果。  
 
 
    2. 強連通分量 strong components
       【概念】
-      ![強連通分量 概念](image-49.png)
+      ![強連通分量 概念](figure/image-49.png)
       類似一般的CC(連通分量)，但是在有向圖當中，可能每個點的連接，來回是不同路徑。  
       將圖分成強連通分量以後，可以找到以強連通分量為單位的DAG。  
 
       【Kosaraju-Sharir 概念】
-      ![範例輸入](image-46.png) **範例輸入**  
-      ![將所有邊都反向以後，做一次dfs](image-50.png) **將所有邊都反向以後，做一次dfs**  
-      ![按照剛剛結果的順序，在原本沒有反向的圖上，再做一次dfs](image-51.png) **按照剛剛結果的順序，在原本沒有反向的圖上，再做一次dfs**  
+      ![範例輸入](figure/image-46.png) **範例輸入**  
+      ![將所有邊都反向以後，做一次dfs](figure/image-50.png) **將所有邊都反向以後，做一次dfs**  
+      ![按照剛剛結果的順序，在原本沒有反向的圖上，再做一次dfs](figure/image-51.png) **按照剛剛結果的順序，在原本沒有反向的圖上，再做一次dfs**  
       正反向各做一次，相當於確保CC內的每個邊，從兩個方向都有路徑可走。
 
       【Kosaraju-Sharir 實作】
-      ![連通分量(無向) 實作](image-47.png) **連通分量(無向) 實作**
-      ![強連通分量(有向) 實作](image-48.png) **強連通分量(有向) 實作**
+      ![連通分量(無向) 實作](figure/image-47.png) **連通分量(無向) 實作**
+      ![強連通分量(有向) 實作](figure/image-48.png) **強連通分量(有向) 實作**
 
 
 
@@ -141,14 +141,14 @@ Symbol Table 實作方法: Binary Search Tree
       如果我們把 MST 中的 f 換成 e，新的樹會比原本的 MST 權重更小。
       這代表使用 f 的 MST 違反了「最小」的定義。
       因此，假設不成立，所有 crossing edge 中權重最小的那一條，一定會在 MST 當中。
-      ![cut property](image-12.png)
+      ![cut property](figure/image-12.png)
 
 5. weighted edge graph 權重邊圖
    之前原本是用vertex(頂點)來建構圖，因為待會MST引入邊的權重，所以改成用edge(邊)來建構圖。
-   ![權重邊的實作](image-14.png) **權重邊的實作**
-   ![權重邊圖的架構](image-13.png) **權重邊圖的架構**
-   ![權重邊圖的鄰接表](image-15.png) **權重邊圖的鄰接表(頂點1, 頂點2, 權重)**
-   ![權重邊圖鄰接表的實作](image-16.png) **權重邊圖鄰接表的實作**
+   ![權重邊的實作](figure/image-14.png) **權重邊的實作**
+   ![權重邊圖的架構](figure/image-13.png) **權重邊圖的架構**
+   ![權重邊圖的鄰接表](figure/image-15.png) **權重邊圖的鄰接表(頂點1, 頂點2, 權重)**
+   ![權重邊圖鄰接表的實作](figure/image-16.png) **權重邊圖鄰接表的實作**
 
 
 6. 貪心 MST 算法:
@@ -157,7 +157,7 @@ Symbol Table 實作方法: Binary Search Tree
    重複切 v-1 次，即可得到 MST。
    不管怎麼切，只要滿足MST一開始的假設，結果就唯一。
    1. Kruskal
-      ![alt text](image-20.png)
+      ![alt text](figure/image-20.png)
       - 【算法說明】
          1. **排序所有邊**：將所有邊按權重從小到大排序。
          2. **初始化 Union-find**：每個頂點初始時屬於自己的獨立集合（即父節點指向自己）。
@@ -167,7 +167,7 @@ Symbol Table 實作方法: Binary Search Tree
          4. **終止條件**：當已選中 V−1 條邊時停止（V 為頂點數）。(如果跑完所有邊也行，但就多浪費時間，不影響結果。)  
 
       - 【程式實作】
-         ![kruskal MST 實作](image-17.png) **kruskal MST 實作**  
+         ![kruskal MST 實作](figure/image-17.png) **kruskal MST 實作**  
          ```java
          public class KruskalMST {
             private Queue<Edge> mst = new Queue<Edge>();  // 用於儲存 MST 的邊
@@ -206,8 +206,8 @@ Symbol Table 實作方法: Binary Search Tree
 
    2. Prim   
       從一個頂點開始，逐步擴張MST的邊界，每次從MST鄰近的邊中選擇權重最小的。  
-      ![Lazy Prim 概念1](image-18.png)
-      ![Lazy Prim 概念2](image-19.png)
+      ![Lazy Prim 概念1](figure/image-18.png)
+      ![Lazy Prim 概念2](figure/image-19.png)
       **Lazy Prim 概念**
 
       - 【Lazy Prim 懶惰算法說明】把edge放到優先佇列  
@@ -271,8 +271,8 @@ Symbol Table 實作方法: Binary Search Tree
          使用最小優先級佇列維護每個非樹頂點到樹的最小權重邊。  
          - 相對於lazy的優點:不會包含無效邊，並且queue長度使用V(頂點)會比E(邊)更短。
          - 相對於lazy的缺點:實作較難，需要額外更新優先級佇列當中的權重(優先級)。  
-         ![Eager Prim 概念1](image-21.png)  
-         ![Eager Prim 概念2](image-22.png)
+         ![Eager Prim 概念1](figure/image-21.png)  
+         ![Eager Prim 概念2](figure/image-22.png)
          第一次執行，MST當中只有0。鄰接點只有(4,7,2,6)  
          第二次執行MST當中有0, 7，此時鄰接點變為(4,5,1,3,2,6)，從MST到4的權重需要更新(0.38 -> 0.37)。
          1. **初始化**：維護distTo[]陣列記錄每個頂點到樹的最小邊權重
@@ -283,8 +283,8 @@ Symbol Table 實作方法: Binary Search Tree
 
       - 【最小優先級佇列 實作】
 
-         ![最小優先級佇列 API](image-23.png) **最小優先級佇列 API**  
-         ![最小優先級佇列 概念](image-24.png) **最小優先級佇列 概念 (紅字是qp[i]) (與上面 eager prim 的圖例沒有關係)**  
+         ![最小優先級佇列 API](figure/image-23.png) **最小優先級佇列 API**  
+         ![最小優先級佇列 概念](figure/image-24.png) **最小優先級佇列 概念 (紅字是qp[i]) (與上面 eager prim 的圖例沒有關係)**  
          最小優先級佇列是使用矩陣實作heap(完全二叉樹)  
          - i代表每個MST外的鄰接點編號
          - key[i]代表每個頂點到MST的最近距離，也就是佇列排序的權重(A最小/最優先)  
@@ -297,23 +297,23 @@ Symbol Table 實作方法: Binary Search Tree
     3. 比較複雜度
        理論上 `prim` Elog()會比 `kruskal` log(E)好一點 因為 E 通常是 V 的平方以上。
        1. Kruskal
-          ![Kruskal](image-26.png)
+          ![Kruskal](figure/image-26.png)
        2. prim 
-          ![prim](image-25.png)
+          ![prim](figure/image-25.png)
              
 
 # 最短路徑(有權重的有向圖)
 ## 權重有向圖的建立
-   ![權重有向邊的實作](image-30.png) **權重有向邊的實作**  
+   ![權重有向邊的實作](figure/image-30.png) **權重有向邊的實作**  
    類似先前(圖-5.權重邊圖)的實作，只差在either, other改成from, to(因為有方向性)。
 
-   ![權重有向圖的API](image-31.png)
+   ![權重有向圖的API](figure/image-31.png)
    
-   ![權重有向圖的鄰接表實作](image-32.png)
+   ![權重有向圖的鄰接表實作](figure/image-32.png)
 
 ## 通用性質
    ### relax 鬆弛
-   ![relax 程式實作](image-33.png)
+   ![relax 程式實作](figure/image-33.png)
    在BFS過程當中，輸入你現在遍歷的有向邊，如果發現從起點到邊的終點(distTo[w])有更短的路徑，就更新最短距離。
 
    #### relax 證明
@@ -327,17 +327,17 @@ Symbol Table 實作方法: Binary Search Tree
       > $distTo[w]>distTo[v]+e.$
       > 則代表當前distTo[w]不是最短路徑，需要被更新為更小的值。
    - iff順向證明
-      ![iff順向證明](image-34.png) 假設最短路徑上的每一條邊都滿足公式，把每一條邊的結果都相加以後，還是會滿足公式(中間的邊可以消掉)。
+      ![iff順向證明](figure/image-34.png) 假設最短路徑上的每一條邊都滿足公式，把每一條邊的結果都相加以後，還是會滿足公式(中間的邊可以消掉)。
 
    ### 初始化
    起點距離設為0，其他點距離設為無限大。
 
 ## 單源最短路徑 具體算法 (只有1個起點, 沒有終點)
 ### Dijkstra (BFS)(權重不能有負)
-![Dijkstra 實作](image-35.png)
-![Dijkstra 實作](image-36.png)
+![Dijkstra 實作](figure/image-35.png)
+![Dijkstra 實作](figure/image-36.png)
 Dijkstra 實作
-![Dijkstra 複雜度](image-37.png)
+![Dijkstra 複雜度](figure/image-37.png)
 #### Dijkstra 複雜度 O(E*log(V))  
 1. 初始化 dist[] 陣列：O(V)。接著把起點加到優先隊列O(V)。小計O(V)
 2. 每次從優先隊列取出距離最小的頂點，總共要取V次，每次取出根結點需要logV(因為要刪除+下沉sink操作)。小計O(V*logV)
@@ -345,10 +345,10 @@ Dijkstra 實作
 4. 合計O(E*logV)
 
 ### Topological sort, DAG 有向無環圖 (DFS)(圖不能有環)
-![DAG概念](image-38.png)
+![DAG概念](figure/image-38.png)
 利用DAG線性序列的特性可以找到最短路徑  
 假設已經跑過DAG得到一個 Topological sort，照這個順序遍歷頂點，對每個頂點檢查鄰接邊，再對每個邊進行鬆弛操作。因為DAG的特性，所以每個邊都只會恰好被經過一次。
-![DAG實作](image-41.png)
+![DAG實作](figure/image-41.png)
 
 #### Topological sort 複雜度 O(V+E)
 1. 拓撲排序找到DAG 小計O(V+E)
@@ -365,8 +365,8 @@ Dijkstra 實作
 
 
 ### Bellman-Ford (可以負權重, 也可以有環, 但是環整體的權重不能是負的)
-![Bellman Ford 概念](image-44.png) **Bellman Ford 概念**  
-![Bellman Ford 程式實作](image-45.png) 一開始先初始化，然後就開始重複v-1次把所有邊都relax，如果做到某次relax都不更新，可以提早終止。  
+![Bellman Ford 概念](figure/image-44.png) **Bellman Ford 概念**  
+![Bellman Ford 程式實作](figure/image-45.png) 一開始先初始化，然後就開始重複v-1次把所有邊都relax，如果做到某次relax都不更新，可以提早終止。  
 
 #### Bellman-Ford 複雜度 O(VE)  
 1. 初始化距離陣列 dist[] ：將所有節點距離設為 ∞, 起點設為 0。 小計O(V) 
@@ -377,18 +377,18 @@ Dijkstra 實作
 4. 合計：O(VE)
 
 ## 三種最短路徑算法 複雜度比較
-![三種最短路徑算法 複雜度比較](image-43.png) **三種最短路徑算法 複雜度比較**
+![三種最短路徑算法 複雜度比較](figure/image-43.png) **三種最短路徑算法 複雜度比較**
 
 ## 最短路徑的應用 Content-aware resizing 裁縫拼接
-![Content-aware resizing 概念](image-39.png) 維持城堡與人不變形，只縮放不重要的背景部分，並且縮放結果看起來也很合理。  
+![Content-aware resizing 概念](figure/image-39.png) 維持城堡與人不變形，只縮放不重要的背景部分，並且縮放結果看起來也很合理。  
 概念上，算法會找出一系列的接縫，接著利用接縫對圖像做縮放。
 1. 首先，我們拿到一張需要縮小的照片
 2. 計算照片中每一個像素的灰階強度
 3. 找到圖中數條強度較低的seams(接縫)
-   ![seams方法說明](image-42.png)
+   ![seams方法說明](figure/image-42.png)
    - 每個像素連接到下方三個鄰居
    - weight of pixel設定為影像強度的差異
    - 找到最短路徑
    - 這個最短路徑的元素最接近，代表移除或膨脹對整體效果最不明顯
-4. ![Seams 在gradient magnitude圖中的結果](image-40.png) Seams 在gradient magnitude圖中的結果
+4. ![Seams 在gradient magnitude圖中的結果](figure/image-40.png) Seams 在gradient magnitude圖中的結果
 5. 接著我們把這些seams拿掉，就可以拿到一張縮小後的照片。
