期末考複習修改

--- a/期末筆記/期末筆記.md
+++ b/期末筆記/期末筆記.md
@@ -1,4 +1,4 @@
-# tree、Symbol Table
+# Tree、Symbol Table
 考慮用哪種 sort 應該要考慮  
 1. 穩定性:在遇到相同大小時不能交換，並且不可破壞上次排序的結果。通常只要不是鄰近兩兩交換的，都不穩定。(只有merge, insert sort是穩定)  
 2. 確定性:有一致的執行過程。快速排序因為一開始會洗牌，所以沒有確定性。  
@@ -32,6 +32,12 @@ Symbol Table 實作方法: Binary Search Tree
 
 4. 遍歷二元樹的方法 preorder, inorder, postorder (https://www.shubo.io/iterative-binary-tree-traversal/)
 5. 紅黑樹: https://www.bilibili.com/video/BV1piF6erE7Y?spm_id_from=333.788.videopod.sections&vd_source=a7ec40e3a00a70629191f9c178661833  
+
+![紅黑樹節點型式](figure/image-52.png)
+![左旋](figure/image-53.png)
+![右旋](figure/image-55.png)
+![翻轉](figure/image-54.png)
+![左偏紅黑樹 插入操作](figure/image-56.png)
 
 
 # 幾何搜尋
